--- a/README.adoc
+++ b/README.adoc
@@ -5,7 +5,7 @@ v.0.1.0
 :toc: left
 :icons: font
 :source-highlighter: highlightjs
-:game-version: 0.1.2a
+:game-version: 0.2.0f
 
 This is a mod for the game https://store.steampowered.com/app/1457320/Techtonica/[Techtonica] that adds VR support.
 
@@ -75,6 +75,7 @@ While the mod is in a playable state, it is still in early development. Some fea
 - The game is locked to 60fps when running in windowed mode. This is based on the refresh rate of your monitor. To unlock the framerate, switch to fullscreen mode. (For now)
 
 === Cool stuff to try
+- Tobii eye tracking for dynamic foveated rendering
 - Enable ik (The game ships with `FinalIK` so it should be possible. Probably just not networked yet.)
 
 == Troubleshooting
