--- a/README.adoc
+++ b/README.adoc
@@ -54,7 +54,6 @@ While the mod is in a playable state, it is still in early development. Some fea
 
 === Missing
 - Gesture support (e.g. Mining using pickaxe motion)
-- Comfort options (e.g. Teleportation). Smooth locomotion and turning only for now. (#9)
 - Model for the player's body. Currently not a priority as this requires IK.
 - Default bindings for VR controllers other than the Valve Index Controllers (#16, #17)
 - Object outlines. Disabled for now as the shader is broken in VR.
@@ -82,6 +81,8 @@ If you encounter any issues while using this mod, please check the BepInEx conso
 [qanda]
 Why is my framerate locked to 60fps?::
 The game is locked to x fps when running in Windowed mode. This is based on the refresh rate of your monitor. To unlock the framerate, switch to fullscreen mode. (For now)
+Does this mod work with Gamepass?::
+Yes, the mod needs to be installed in `Gamepass/Techtonica/Content`.
 // AI generated below :P
 Why is the mod not open source?::
 It is. You are looking at the source right now (duh!).
