--- a/README.adoc
+++ b/README.adoc
@@ -1,10 +1,17 @@
 = Techtonica VR Mod
+// x-release-please-start-version
 v.0.1.0
+// x-release-please-end
 :toclevels: 2
 :sectnums:
 :toc: left
 ifdef::env-github[]
+:toc:
+:toc-placement!:
 :caution-caption: :fire:
+endif::[]
+ifndef::env-github[]
+:toc: left
 endif::[]
 :icons: font
 :source-highlighter: highlightjs
@@ -29,6 +36,10 @@ image:https://img.shields.io/github/license/{repo}[License]
 This is a mod for the game https://store.steampowered.com/app/1457320/Techtonica/[Techtonica] that adds VR support.
 
 CAUTION: This mod is still in early development and *will* contain bugs. Use at your own risk. Only tested with the Valve Index / Pimax Crystal and Knuckles controllers.
+
+ifdef::env-github[]
+toc::[]
+endif::[]
 
 == Prerequisites
 
