--- a/README.adoc
+++ b/README.adoc
@@ -48,6 +48,8 @@ endif::[]
 
 == Setup
 
+You can install the mod from https://thunderstore.io/package/{tbd}/[Thunderstore] or install it manually:
+
 === BepInEx
 . Download the latest 5.x release of BepInEx from the https://github.com/BepInEx/BepInEx/releases[Releases] page.
 . Extract the downloaded archive into the game's installation directory.
