--- a/README.adoc
+++ b/README.adoc
@@ -117,6 +117,48 @@ While the mod is in a playable state, it is still in early development. Some fea
 - Tobii eye tracking for dynamic foveated rendering
 - Enable ik (The game ships with `FinalIK` so it should be possible. Probably just not networked yet.)
 
+== Configuration
+The configuration file is located in `BepInEx/config/de.xenira.techtonica.cfg`. You can edit it using a text editor like Notepad.
+
+=== Resetting the Configuration
+To reset the configuration, delete the `de.xenira.techtonica.cfg` file in the `BepInEx/config` folder. The mod will create a new configuration file with the default values the next time you run the game.
+
+To reset only a specific section, delete the section from the configuration file. The mod will create a new section with the default values the next time you run the game.
+
+=== Configuration Options
+[horizontal]
+.General
+Enabed:: Enables or disables the mod. Default: `true`
+[horizontal]
+.Input
+Smooth Turn Speed:: Speed of smooth turning. Default: `90`
+[horizontal]
+.Comfort
+Snap Turn Angle:: Angle of snap turns. Default: `30`
+Teleport Range:: Velocity of teleport arc. Effectively determines rang. Default: `12`
+Vignette Enabled:: Enables or disables vignette. If this is disabled the other vignette effects will be disabled as well. Default: `false`
+Vignette On Teleport:: Enables or disables vignette when teleporting. Default: `true`
+Vignette On Smooth Locomotion:: Enables or disables vignette when using smooth locomotion. Default: `true`
+Vignette On Snap Turn:: Enables or disables vignette when using snap turning. Default: `true`
+Vignette Color:: Color of the vignette. Default: `000000FF` Black
+Vignette Intensity:: Intensity of the vignette. Determines how far the vignette will close. Default: `0.5`
+Vignette Smoothness:: Adds a blur to the vignette edge. 0 is sharp edge, 1 is prob. unusable. Default: `0.15`
+Vignette Fade Speed:: Animation speed of the vignette. Higher is faster. Default: `3`
+[horizontal]
+.Buttons
+Long Press Time:: Time in seconds before a button press is considered a long press. Default: `1`
+[horizontal]
+.UI
+Menu Spawn Distance:: Distance of the menu from the player. Default: `0.8`
+Menu Scale:: Scale of the menu (X/Y/Z). Default: `{"x":0.2,"y":0.2,"z":0.2}`
+Inventory and Crafting Menu Scale Override:: Scale of the inventory and crafting menu (X/Y/Z). This menu has different scaling and needs separate config. Default: `{"x":0.2,"y":0.1,"z":0.2}`
+Menu Downward Offset:: Offset of the menu in the downward direction. Default: `0.2`
+[horizontal]
+.Debug
+Debug Mode:: Mostly used for development. Default: `false`
+Gizmo Enabled:: Enables or disables gizmos. Only some objects have gizmos attached. Default: `false`
+Debug Line Enabled:: Enables or disables debug lines. Only some objects have debug lines attached and the direction might seem arbetrary at first glance. Default: `false`
+
 == Troubleshooting
 
 If you encounter any issues while using this mod, please check the BepInEx console for any error messages. You can also report issues on the https://github.com/{repo}/issues[Issues] page of this repository.
